Fix attributes of typed enums of typedefs

For this enum:
typedef unsigned char byte;
enum byte_enum : byte
{
  byte_val = 128
};

The unsigned attribute is not set:
(gdb) p byte_val
$1 = -128

That's because it uses the attributes of the 'byte' typedef for the enum.
So this changes it to use the attributes of the underlying 'unsigned char'
instead.

gdb/ChangeLog:

2020-04-03  Hannes Domani  <ssbssa@yahoo.de>

	PR gdb/25325
	* dwarf2/read.c (read_enumeration_type): Fix typed enum attributes.

gdb/testsuite/ChangeLog:

2020-04-03  Hannes Domani  <ssbssa@yahoo.de>

	PR gdb/25325
	* gdb.cp/typed-enum.cc: New test.
	* gdb.cp/typed-enum.exp: New file.